Revert "Merge branch 'Bhavik' into Daniel2"
This reverts commit fb79198328415f60a835247691e6d47ab0e52b51, reversing
changes made to 9b36b3d7de8e4c57062a04a61bd2ff898fd3f301.

--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -73,7 +73,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Message" class="control-label"></label>
-                <textarea asp-for="Message" class="form-control" style="height:100px"></textarea>
+                <textarea asp-for="Message" class="form-control"></textarea>
                 <span asp-validation-for="Message" class="text-danger"></span>
             </div>
             <div data-callback="captchaVerify" class="g-recaptcha" data-sitekey="6LdZCxEdAAAAACZfBlPZpGb7vhSt5pwpKzRoi9DM" style="transform: scale(0.77); -webkit-transform: scale(1.16); transform-origin: 0 0; -webkit-transform-origin: 0 0;"></div>
