--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -2,7 +2,6 @@
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
-@using VPWebSolutions.Logic
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -131,13 +130,12 @@
                                 <partial name="_LoginPartial" />
                                 <button id="language-change" onclick="changeLanguage()">FR</button>
                                 <!--https://www.flaticon.com/premium-icon/shopping-cart_2838895?term=cart&page=1&position=1&page=1&position=1&related_id=2838895&origin=tag-->
-                                <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Cart"><img class="cart-icon" src="~/images/cart-icon.png" style="height:50px"><p id="cartCount">@CartActions.listItems.Count()</p></a>
-                                
+                                <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Cart"><img class="cart-icon" src="~/images/cart-icon.png" style="height:50px" /></a>
                             </div>
                         </div>
                     }
                 </nav>
-            </header>
+                </header>
             <div class="container mb-3">
                 <main role="main" class="pb-3">
                     @RenderBody()
