--- a/Views/Home/OrderDetails.cshtml
+++ b/Views/Home/OrderDetails.cshtml
@@ -63,3 +63,10 @@
 <div>
     <a asp-action="Orders" class = "btn btn-primary">Back to List</a>
 </div>
+
+<style>
+    dd, h4, dt, li, h1 {
+        color: #DEC20B;
+        font-weight: bold;
+    }
+</style>
