--- a/Views/Order/OrdersToCook.cshtml
+++ b/Views/Order/OrdersToCook.cshtml
@@ -64,3 +64,10 @@
         }
     </tbody>
 </table>
+
+<style>
+    h1, th, td {
+        color: #DEC20B;
+        font-weight: bold;
+    }
+</style>
