--- a/Views/Manager/Orders.cshtml
+++ b/Views/Manager/Orders.cshtml
@@ -88,7 +88,7 @@
                 @Html.DisplayNameFor(model => model.Status)
             </th>
             <th>
-                Customer @Html.DisplayNameFor(model => model.Customer.Email)
+                Customer @Html.DisplayNameFor(model => model.UserData.PrefferedAddress)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.OrderAddress)
@@ -122,7 +122,7 @@
                 @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Customer.Email)
+                @Html.DisplayFor(modelItem => item.UserData.PrefferedAddress)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.OrderAddress)
