--- a/Views/Order/Orders.cshtml
+++ b/Views/Order/Orders.cshtml
@@ -14,7 +14,7 @@
                 @Html.DisplayNameFor(model => model.Id)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.UserData.PrefferedAddress)
+                @Html.DisplayNameFor(model => model.OrderAddress)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Items)
@@ -36,7 +36,7 @@
                     @Html.DisplayFor(modelItem => order.Id)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => order.UserData.PrefferedAddress)
+                    @Html.DisplayFor(modelItem => order.OrderAddress)
                 </td>
                 <td>
                     <ul>
