Fixed some bugs
Manager and employee can now make order
Back to list works on profile order list

--- a/Views/Home/OrderDetails.cshtml
+++ b/Views/Home/OrderDetails.cshtml
@@ -61,5 +61,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Orders" class = "btn btn-primary">Back to List</a>
+    <a href="../../Identity/Account/Manage/OrderList" class = "btn btn-primary">Back to List</a>
 </div>
