--- a/Views/UserRoles/Index.cshtml
+++ b/Views/UserRoles/Index.cshtml
@@ -29,4 +29,7 @@
             </tr>
         }
     </tbody>
+    <td>
+        <a class="btn btn-primary" asp-controller="UserRoles" asp-action="Create" asp-route-previous="">Manage Roles</a>
+    </td>
 </table>
