--- a/Views/UserRoles/UserRoles.cshtml
+++ b/Views/UserRoles/UserRoles.cshtml
@@ -30,3 +30,9 @@
         }
     </tbody>
 </table>
+<style>
+    h1, th, td {
+        color: #DEC20B;
+        font-weight: bold;
+    }
+</style>
